--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,34 @@
-.App {
+* {
+  margin: 0;
+  padding: 0;
+}
+
+.register-title {
   text-align: center;
+  margin-bottom: 20px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+/* form{
+  margin-left: auto;
+  margin-right: auto;
+  padding: 10px 20px;
+  width: max-content;
+  height: max-content;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-top: 20px;
+  border: 3px solid black;
+  border-radius: 5px;
+} */
+
+.register-input {
+  margin: 10px auto;
+  padding: 7px 0;
+  margin: 2%;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.register-button {
+  padding: 2px 5px;
+  margin-left: auto;
+  margin-right: auto;
 }
