--- a/client/src/App.css
+++ b/client/src/App.css
@@ -9,6 +9,11 @@
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+.inputs{
+  margin-left: auto;
+  margin-right: auto;
+}
+
 /* form{
   margin-left: auto;
   margin-right: auto;
